--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,14 +34,15 @@
 
         <activity android:name=".activities.TicketCreation"></activity>
         <activity android:name=".activities.TicketCheck" />
-        <activity android:name=".activities.QrScanner" />
-
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.QrScanner" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".activities.MainActivity">
         </activity>
     </application>
 
