--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,14 +32,15 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".activities.CreationEvent" />
 
-        <activity android:name=".activities.TicketCreation"></activity>
-        <activity android:name=".activities.TicketCheck" />
-        <activity android:name=".activities.QrScanner" >
+        <activity android:name=".activities.TicketCreation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activities.TicketCheck" />
+        <activity android:name=".activities.QrScanner" >
+
         </activity>
 
         <activity android:name=".activities.MainActivity">
