Adding tabbed list of events activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ma.ensias.ticket_me">
 
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ticketme">
+        <activity android:name=".activities.test">
 
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -24,26 +25,26 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
 
-        <activity android:name=".activities.EventActivity">
-
-        </activity>
-
         <activity
-            android:name=".activities.MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".activities.CreationEvent" />
-
-        <activity android:name=".TicketCreation"></activity>
-        <activity android:name=".TicketCheck" />
-        <activity android:name=".QrScanner" />
-
-        <activity android:name=".activities.MainActivity">
+            android:name=".activities.ListOfEventsActivity"
+            android:label="@string/title_activity_list_of_events"
+            android:theme="@style/Theme.Ticketme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity android:name=".activities.EventActivity" />
+        <activity
+            android:name=".activities.MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".activities.CreationEvent" />
+        <activity android:name=".TicketCreation" />
+        <activity android:name=".TicketCheck" />
+        <activity android:name=".QrScanner" />
+        <activity android:name=".activities.MainActivity"></activity>
     </application>
 
 </manifest>
