--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ticketme">
-
+        android:theme="@style/Theme.Ticketme"
+        android:requestLegacyExternalStorage="true"
+        >
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
