--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,20 +5,20 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ticketme"
-        android:requestLegacyExternalStorage="true"
-        >
+        android:theme="@style/Theme.Ticketme">
+        <activity android:name=".activities.StatsActivity"></activity>
+        <activity android:name=".activities.Home" />
 
-        <activity android:name=".activities.Home"></activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBBF0w3TdZL_Hup2XsN_95-RQ_SvF4xfnk" />
@@ -30,19 +30,19 @@
         <activity
             android:name=".activities.ListOfEventsActivity"
             android:label="@string/title_activity_list_of_events"
-            android:theme="@style/Theme.Ticketme.NoActionBar"></activity>
+            android:theme="@style/Theme.Ticketme.NoActionBar" />
         <activity android:name=".activities.EventActivity" />
         <activity
             android:name=".activities.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".activities.CreationEvent" />
-
         <activity android:name=".activities.TicketCreation" />
         <activity android:name=".activities.TicketCheck" />
         <activity android:name=".activities.QrScanner" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
